Fix line wrapping

--- a/src/report/report_viewer.css
+++ b/src/report/report_viewer.css
@@ -89,6 +89,8 @@ html, body {
   border: 1px solid #999;
   padding: 10px;
   counter-reset: line;
+  display: flex;
+  flex-direction: column;
 }
 
 .code-line::before {
